--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@
       display: flex;
       height: 100vh;
       overflow: hidden;
+      background: #64C097;
     }
 
     .container {
@@ -16,13 +17,14 @@
     }
 
     .login-section {
-      width: 35%;
+      width: 45%;
       background-color: #64C097;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       padding: 20px;
+      height: min-content;
     }
 
     .login-box {
@@ -35,7 +37,7 @@
       border-inline-end-width: 6px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       width: 100%;
-      max-width: 320px;
+      max-width: 380px;
       text-align: center;
     }
 
@@ -105,7 +107,7 @@
       margin-bottom: 20px;
     }
 .right-section {
-  width: 65%;
+  width: 55%;
   position: relative;
   background: url("./img/fundo.png") no-repeat center center;
   background-size: cover;
@@ -157,6 +159,7 @@
     @media (max-width: 768px) {
       .container {
         flex-direction: column;
+        background-color: #64C097;
       }
       .login-section, .right-section {
         width: 100%;
@@ -164,5 +167,8 @@
       }
       .right-section {
         min-height: 300px;
+      }
+      .right-section{
+        display: none;
       }
     }
