--- a/User/style.css
+++ b/User/style.css
@@ -49,7 +49,7 @@ body {
 }
 
 .menu-toggle {
-    padding: 20px;
+    padding: 17px;
     cursor: pointer;
     text-align: center;
     background-color: rgba(12, 52, 44, 0.7);
@@ -72,7 +72,7 @@ body {
 .menu li {
     display: flex;
     align-items: center;
-    padding: 15px;
+    padding: 17px;
     cursor: pointer;
     transition: background 0.2s;
 }
@@ -101,14 +101,16 @@ body {
     list-style: none;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
 }
-.sidebar-footer img{
-    width: 30px;
+
+.sidebar-footer img {
+    width: 35px;
     padding-right: 10px;
 }
+
 .sidebar-footer li {
     display: flex;
     align-items: center;
-    padding: 15px;
+    padding: 17px;
     cursor: pointer;
     transition: background 0.2s;
     background-color: #09A485;
@@ -133,6 +135,29 @@ body {
     display: inline;
 }
 
+/* Retira as propriedades de estilo do link*/
+.sidebar a {
+    text-decoration: none; 
+    color: inherit;       
+}
+
+
+/* NOME DA PAG - LOGO MENU*/
+header {
+    text-align: center;
+    padding: 10px;
+    font-size: 24px;
+    position: relative;
+    padding-bottom: 0px;
+}
+
+header img {
+    position: absolute;
+    right: 20px;
+    top: 12px;
+    width: 70px;
+}
+
 /* Conteúdo principal */
 .content {
     margin-left: 60px;
@@ -143,7 +168,7 @@ body {
     position: relative;
 }
 
-.sidebar.expanded ~ .content {
+.sidebar.expanded~.content {
     margin-left: 300px;
 }
 
@@ -169,11 +194,13 @@ body {
     gap: 20px;
 }
 
-.comment-box, .post, .note-box {
+.comment-box,
+.post,
+.note-box {
     background-color: #c6f8d7;
     padding: 15px;
     border-radius: 8px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
 .user-header {
